feat: 实现Java代码沙箱的模板方法